examples/test/testpolicy4188.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4188
  namespace: namespace160
spec:
  podSelector:
    matchLabels:
      key38: value39
      key16: value32
      key31: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value49
      podSelector:
        matchLabels:
          key15: value13
          key31: value9
